# multimodal-fewshot-prompting

./: .gitignore  pyproject.toml
data/validation/: labels.json
multimodal_fewshot_prompting/: main.py
multimodal_fewshot_prompting/eval/: evaluator.py
multimodal_fewshot_prompting/llm/: ollama.py
multimodal_fewshot_prompting/parsers/: __init__.py  speedtest.py
multimodal_fewshot_prompting/prompts/: __init__.py  factory.py  fewshot.py  system.py  task.py  zeroshot.py
multimodal_fewshot_prompting/schemas/: __init__.py  speedtest.py  sppedtest.py
multimodal_fewshot_prompting/vision/: __init__.py  image_loader.py
notebooks/: evaluator.ipynb  fewshot_multimodal.ipynb
