[project]
name = "multimodal-fewshot-prompting"
version = "0.1.0"
description = ""
authors = [
    {name = "Octavio-Santana",email = "octaviofisica@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
